Minor edits to homepage

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Democracy Token</h1>
-							<p>An equitable stellar token with a unique system to prohibit whales.<a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<p>An equitable stellar token with a unique system to prohibit whales.</p>
 							<ul class="actions">
 								<li><a href="https://t.me/joinchat/CsjdSSpq90g5Mzgx" class="button scrolly">Learn more on Telegram</a></li>
 							</ul>
@@ -85,7 +85,7 @@
 							<p>By being built on the stellar chain, DEMOCRACY tokens gain many advantages over other DLT tokens</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
+									<span class="icon solid major fa-envira"></span>
 									<h3>Environmentally Friendly</h3>
 									<p>Stellar's Consensus Protocol (SCP), a form of Federated Byzantine Agreement (FBA), is orders of magnitude more efficient than Proof of Work (PoW) and Proof of Stake (PoS) systems used by most other blockchains</p>
 								</section>
@@ -110,7 +110,7 @@
 									<p>All transactions on the stellar blockchain (under Protocol 16) are immutable, so no one can seize your assets or reverse your transactions. Moreover, DEMOCRACY tokens provide immutable authorization. Once your trustline is approved, no one (even us!) can revoke it.</p>
 								</section>
 								<section>
-									<span class="icon major fa-gem"></span>
+									<span class="icon major fa-usd"></span>
 									<h3>Affordable</h3>
 									<p>With miniscule transaction fees (0.00001 XLM), using DEMOCRACY tokens costs only a tiny fraction of a cent for any transaction.</p>
 								</section>
