--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Democracy Token</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -65,7 +66,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/ConstProdInv.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Automatically liquid</h2>
@@ -81,7 +82,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Advantage of Stellaar</h2>
+							<h2>Advantage of Stellar</h2>
 							<p>By being built on the stellar chain, DEMOCRACY tokens gain many advantages over other DLT tokens</p>
 							<div class="features">
 								<section>
