--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 							<p>By being built on the stellar chain, DEMOCRACY tokens gain many advantages over other DLT tokens</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-envira"></span>
+									<span class="fas fa-question-circle"></span>
 									<h3>Environmentally Friendly</h3>
-									<p>Stellar's Consensus Protocol (SCP), a form of Federated Byzantine Agreement (FBA), is orders of magnitude more efficient than Proof of Work (PoW) and Proof of Stake (PoS) systems used by most other blockchains</p>
+									<p>Stellar's Consensus Protocol (SCP), a form of Federated Byzantine Agreement (FBA), is orders of magnitude more efficient than Proof of Work (PoW) and Proof of Stake (PoS) systems used by most other blockchains.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
@@ -124,11 +124,11 @@
 				<!-- Three -->
 				<section id="three" class="wrapper style2 spotlights">
 					<section>
-						<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+						<a href="#" class="image"><img src="images/SolarWallet.png" alt="" data-position="center center" /></a>
 						<div class="content">
 							<div class="inner">
 								<h2>Buy via Solar Wallet</h2>
-								<p>Read a details tutorial to buy DEMOCRACY using Solar Wallet. If you have another prefered wallet (Lobstr, Keybase, etc...), you can import your wallet to Solar as well, or use one of the other two options</p>
+								<p>Read a details tutorial to buy DEMOCRACY using Solar Wallet. If you have another prefered wallet (Lobstr, Keybase, etc...), you can import your wallet to Solar as well, or use one of the other two options.</p>
 								<ul class="actions">
 									<li><a href="generic.html" class="button">Read More</a></li>
 								</ul>
@@ -136,7 +136,7 @@
 						</div>
 					</section>
 					<section>
-						<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+						<a href="#" class="image"><img src="images/StellarIcon.png" alt="" data-position="top center" /></a>
 						<div class="content">
 							<div class="inner">
 								<h2>Buy via Stellar Laboratory + Anything</h2>
@@ -148,7 +148,7 @@
 						</div>
 					</section>
 					<section>
-						<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+						<a href="#" class="image"><img src="images/BuyDirectly.svg" alt="" data-position="25% 25%" /></a>
 						<div class="content">
 							<div class="inner">
 								<h2>Buy directly (requires secret key)</h2>
