Added content to genetic linked pages, added images to index

--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/WhaleIcon.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Whale-Proof</h2>
 									<p>Through a unique automated trustline authorization system, DEMOCRACY tokens are proofed against excessive accumulation by a single individual, eliminating the risk of rug-pulls and pump-and-dumps associated with many other stellar tokens.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Read More</a></li>
+										<li><a href="technical.html" class="button">Detaills</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/Scarcity.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Scarce</h2>
 									<p>With a total supply of only 2 billion tokens, DEMOCRACY is 25x more scarce than stellar lumens, and 5x more scarce than popular lumen tokens like DOGET</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="technical.html" class="button">Details</a></li>
 									</ul>
 								</div>
 							</div>
@@ -72,7 +72,7 @@
 									<h2>Automatically liquid</h2>
 									<p>The distribution account will release the initial supply of tokens according to a constant product invariant model (quantity * price = constant), and can always accept them back according to the same model. This lead to a naturally liquid market, and ensures that a small supply of tokens will always be available to new users.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="technical.html" class="button">Details</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,7 +86,7 @@
 							<p>By being built on the stellar chain, DEMOCRACY tokens gain many advantages over other DLT tokens</p>
 							<div class="features">
 								<section>
-									<span class="fas fa-question-circle"></span>
+									<span class="fas fa-envira"></span>
 									<h3>Environmentally Friendly</h3>
 									<p>Stellar's Consensus Protocol (SCP), a form of Federated Byzantine Agreement (FBA), is orders of magnitude more efficient than Proof of Work (PoW) and Proof of Stake (PoS) systems used by most other blockchains.</p>
 								</section>
@@ -111,7 +111,7 @@
 									<p>All transactions on the stellar blockchain (under Protocol 16) are immutable, so no one can seize your assets or reverse your transactions. Moreover, DEMOCRACY tokens provide immutable authorization. Once your trustline is approved, no one (even us!) can revoke it.</p>
 								</section>
 								<section>
-									<span class="icon major fa-usd"></span>
+									<span class="fas fa-usd"></span>
 									<h3>Affordable</h3>
 									<p>With miniscule transaction fees (0.00001 XLM), using DEMOCRACY tokens costs only a tiny fraction of a cent for any transaction.</p>
 								</section>
@@ -130,7 +130,7 @@
 								<h2>Buy via Solar Wallet</h2>
 								<p>Read a details tutorial to buy DEMOCRACY using Solar Wallet. If you have another prefered wallet (Lobstr, Keybase, etc...), you can import your wallet to Solar as well, or use one of the other two options.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Read More</a></li>
+									<li><a href="BuyDEMOCRACY.html" class="button">Read More</a></li>
 								</ul>
 							</div>
 						</div>
@@ -142,7 +142,7 @@
 								<h2>Buy via Stellar Laboratory + Anything</h2>
 								<p>A simple (3-click) tutorial on using the stellar laboratory to establish the needed trustline, which will allow you to trade DEMOCRACY anywhere else (StellarTerm, Lobstr, Interstellar...etc)</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="BuyDEMOCRACY.html" class="button">Learn more</a></li>
 								</ul>
 							</div>
 						</div>
@@ -154,7 +154,7 @@
 								<h2>Buy directly (requires secret key)</h2>
 								<p>You can also use your secret key to purchase DEMOCRACY directly (please verify that the URL is correct before using this option!)</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="ButDEMOCRACY.html" class="button">Learn more</a></li>
 								</ul>
 							</div>
 						</div>
@@ -162,7 +162,7 @@
 				</section>
 
 				<!-- Four -->
-					<section id="three" class="wrapper style1 fade-up">
+					<section id="four" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>We're always happy to help or collaborate. Reach out via any of the forms below!</p>
