--- a/technical.html
+++ b/technical.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Technical Details</a>
+				<a href="index.html" class="title">Whitepaper/Technical Details</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -32,13 +32,26 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Whale-Proof</h1>
+							<h1 class="major">Whitepaper/Technical Details</h1>
 							<span class="image fit"><img src="images/TechnicalDetailsBanner.jpg" alt="" /></span>) 
-							<p>In order for a wallet to hold any stellar asset, it must establish a trustline to the asset. Typically, these trustlines are automatically accepted, regardless of their charectaristics. For DEMOCRACY tokens, trustlines are instead approved only if they are made with a limit of 1,000,000 or fewer tokens. In this way, it can be ensured that no account (except for the distributing account, which simply provides liquidity), can possess more than .05% of the token supply. This creates a uniquely equitable token distribution, and prevents accumulation of tokens by whales, thus eliminating the risk of market manipulation. The need to establish a trustline with a limit cap is the reason that solar wallet or a custom stellar transaction must be used to establish trust to the asset. After this, any wallet can be used to trade DEMOCRACY tokens.</p>
+							<p>Read technical details of the project below. This page will be updated periodically to address any questions that arise.</p>
 						</div>
 					</section>
+					
 
 			</div>
+		<!-- Wrapper -->
+		<div id="wrapper">
+
+			<!-- Main -->
+				<section id="main" class="wrapper">
+					<div class="inner">
+						<h1 class="major">Whale-Proof</h1>
+						<p>In order for a wallet to hold any stellar asset, it must establish a trustline to the asset. Typically, these trustlines are automatically accepted, regardless of their charectaristics. For DEMOCRACY tokens, trustlines are instead approved only if they are made with a limit of 1,000,000 or fewer tokens. In this way, it can be ensured that no account (except for the distributing account, which simply provides liquidity), can possess more than .05% of the token supply. This creates a uniquely equitable token distribution, and prevents accumulation of tokens by whales, thus eliminating the risk of market manipulation. The need to establish a trustline with a limit cap is the reason that solar wallet or a custom stellar transaction must be used to establish trust to the asset. After this, any wallet can be used to trade DEMOCRACY tokens.</p>
+					</div>
+				</section>
+
+		</div>
         <!-- Wrapper -->
 			<div id="wrapper">
 
