Fixed mixed style sheet reference

--- a/technical.html
+++ b/technical.html
@@ -33,7 +33,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Whitepaper/Technical Details</h1>
-							<span class="image fit"><img src="images/TechnicalDetailsBanner.jpg" alt="" /></span>) 
+							<span class="image fit"><img src="images/TechnicalDetailsBanner.jpg" alt="" /></span>
 							<p>Read technical details of the project below. This page will be updated periodically to address any questions that arise.</p>
 						</div>
 					</section>
