Changed icon classes in index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<p>By being built on the stellar chain, DEMOCRACY tokens gain many advantages over other DLT tokens</p>
 							<div class="features">
 								<section>
-									<span class="fas fa-envira"></span>
+									<span class="icon solid major fa-envira"></span>
 									<h3>Environmentally Friendly</h3>
 									<p>Stellar's Consensus Protocol (SCP), a form of Federated Byzantine Agreement (FBA), is orders of magnitude more efficient than Proof of Work (PoW) and Proof of Stake (PoS) systems used by most other blockchains.</p>
 								</section>
@@ -111,7 +111,7 @@
 									<p>All transactions on the stellar blockchain (under Protocol 16) are immutable, so no one can seize your assets or reverse your transactions. Moreover, DEMOCRACY tokens provide immutable authorization. Once your trustline is approved, no one (even us!) can revoke it.</p>
 								</section>
 								<section>
-									<span class="fas fa-usd"></span>
+									<span class="icon solid major fa-usd"></span>
 									<h3>Affordable</h3>
 									<p>With miniscule transaction fees (0.00001 XLM), using DEMOCRACY tokens costs only a tiny fraction of a cent for any transaction.</p>
 								</section>
