Filled in content on BuyDEMOCRACY.html and fixed minor errors on index.html and technical.html"

--- a/BuyDEMOCRACY.html
+++ b/BuyDEMOCRACY.html
@@ -32,10 +32,47 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Buy with Solar Wallet</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major">How to buy democracy tokens</h1>
+							<span class="image fit"><img src="images/TechnicalDetailsBanner.jpg" alt="" /></span>
+							<p>Once a trustline to democracy token is established, you can buy and sell it with any stellar dex interface (StellarTerm, Lobstr, Interstellar, StellarX, Stellar Laboratory), just like any other stellar asset. The only difference is that you must establish a capped trustline, which many programs/interfaces are incapable of. As such, three options are given below to establish a valid, capped trustline.</p>
+                            <div class="col-6 col-12-medium">
+                                <h3>Ordered</h3>
+                                <ol>
+                                    <li>Click on your account</li>
+                                    <li>Click the menu in the top right (three horizontal white bars)</li>
+                                    <li>Select "Assets & Balances"</li>
+                                    <li>Click "+ Add Asset To Your Account" (at the top of the page)</li>
+                                    <li>Select "Add Custom Asset"</li>
+                                    <li>Enter "DEMOCRACY" in the "CODE" field, "GDEMOYMTQQ4ZHWVJFIQPORWGQYV3BXQKIRWZ7X4ETB5VZTON3BBNLETI" in the "ISSUER" field, and any number less than or equal to 1,000,000 in the "LIMIT" field.</li>
+                                    <li>A button for "Trust" will appear. Click it.</li>
+                                    <li>Enter your account password, and press "CONFIRM" (at the bottom of the page)</li>
+                                </ol>
+                            </div>    
+                        </div>
+					</section>
+
+			</div>
+        <!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<h1 class="major">Using Stellar Laboratory</h1>
+							<p>To create the trustline quickly using Stellar Laboratory, enter your public key/adress in the field below. This will link you to a completed XDR (transaction) on Stellar Laboratory. Simply enter your private key on Stellar Laboratory to sign the transaction, and submit it.</p>
+						</div>
+					</section>
+
+			</div>
+        
+        <!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<h1 class="major">Directly (Not recommended)</h1>
+							<p>Alternatively, enter your account secret key in the box below, and we will securely execute a transaction to establish an appropriate trustline. Please note that your secret key can be used to execute any transaction for your account. Using one of the two options mentioned above is more secure.</p>
 						</div>
 					</section>
 
