--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<h2>Whale-Proof</h2>
 									<p>Through a unique automated trustline authorization system, DEMOCRACY tokens are proofed against excessive accumulation by a single individual, eliminating the risk of rug-pulls and pump-and-dumps associated with many other stellar tokens.</p>
 									<ul class="actions">
-										<li><a href="technical.html" class="button">Detaills</a></li>
+										<li><a href="technical.html" class="button">Details</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,7 +86,7 @@
 							<p>By being built on the stellar chain, DEMOCRACY tokens gain many advantages over other DLT tokens</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-envira"></span>
+									<span class="icon solid major fa-leaf"></span>
 									<h3>Environmentally Friendly</h3>
 									<p>Stellar's Consensus Protocol (SCP), a form of Federated Byzantine Agreement (FBA), is orders of magnitude more efficient than Proof of Work (PoW) and Proof of Stake (PoS) systems used by most other blockchains.</p>
 								</section>
