--- a/technical.html
+++ b/technical.html
@@ -71,7 +71,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Automated Liquidity</h1>
-							<p>The distribution account, GDISTY2LMDTLJB36TVX3KNCDDXJ6SWZOJIMZDBJ7JM767LJ4WZ2322T, will always maintain buy and sell orders with the entire inventory of unsold DEMOCRACY tokens and corresponding quantity of lumens according to a pair of constant product invariants.</p>
+							<p>The distribution account, <a href="https://stellar.expert/explorer/public/account/GDISTY2LMDTLJB36TVX3KNCDDXJ6SWZOJIMZDBJ7JM767LJ4WZ2322TJ">GDIST...322T</a>, will always maintain liquidity via automated buy and sell offers according to two constant product invariant curves.</p>
 						</div>
 					</section>
 
