Removed link to generic.html

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 									<p>With miniscule transaction fees (0.00001 XLM), using DEMOCRACY tokens costs only a tiny fraction of a cent for any transaction.</p>
 								</section>
 							</div>
-							<ul class="actions">
+							<!-- <ul class="actions"> 
 								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 				<!-- Three -->
