--- a/index.html
+++ b/index.html
@@ -191,20 +191,20 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
+											<!--<h3>Address</h3>
 											<span>12345 Somewhere Road #654<br />
 											Nashville, TN 00000-0000<br />
-											USA</span>
+											USA</span>-->
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">support@democracy-token.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>(415) 529-9587</span>
 										</li>
-										<li>
+										<!--<li>
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -212,8 +212,8 @@
 												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
+											</ul> 
+										</li>-->
 									</ul>
 								</section>
 							</div>
