Added TrustAdder temporarily

--- a/BuyDEMOCRACY.html
+++ b/BuyDEMOCRACY.html
@@ -34,9 +34,21 @@
 						<div class="inner">
 							<h1 class="major">How to buy democracy tokens</h1>
 							<span class="image fit"><img src="images/TechnicalDetailsBanner.jpg" alt="" /></span>
-							<p>Once a trustline to democracy token is established, you can buy and sell it with any stellar dex interface (StellarTerm, Lobstr, Interstellar, StellarX, Stellar Laboratory), just like any other stellar asset. The only difference is that you must establish a capped trustline, which many programs/interfaces are incapable of. As such, three options are given below to establish a valid, capped trustline.</p>
+							<p>Once a trustline to democracy token is established, you can buy and sell it with any stellar dex interface (StellarTerm, Lobstr, Interstellar, StellarX, Stellar Laboratory), just like any other stellar asset. The only difference is that you must establish a capped trustline, which many programs/interfaces are incapable of. As such, three options are given below to establish a valid, capped trustline.</p> 
+                        </div>
+					</section>
+
+			</div>
+        <!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<h1 class="major">With Solar Wallet</h1>
+                            <p>Follow the steps below to establish a trustline with Solar Wallet</p>
                             <div class="col-6 col-12-medium">
-                                <h3>Ordered</h3>
+                                <h3>Steps:</h3>
                                 <ol>
                                     <li>Click on your account</li>
                                     <li>Click the menu in the top right (three horizontal white bars)</li>
@@ -47,11 +59,13 @@
                                     <li>A button for "Trust" will appear. Click it.</li>
                                     <li>Enter your account password, and press "CONFIRM" (at the bottom of the page)</li>
                                 </ol>
-                            </div>    
-                        </div>
+                            </div>
+							
+						</div>
 					</section>
 
 			</div>
+
         <!-- Wrapper -->
 			<div id="wrapper">
 
