--- a/TrustAdder.html
+++ b/TrustAdder.html
@@ -1,86 +1,268 @@
 <html>
+<style>
+    /* button style from: https://fdossena.com/?p=html5cool/buttons/i.frag */
+
+    /* Overall formatting from: https://www.w3schools.com/css/tryit.asp?filename=trycss_template1_float */
+    .header {
+    background-color: rgb(0, 0, 0);
+    padding: 30px;
+    text-align: center;
+    font-size: 28px;
+    }
+
+    /* Create three equal columns that floats next to each other */
+    .column {
+    float: left;
+    text-align: center;
+    width: 50%;
+    padding: 0px;
+    font-size: 28px;
+    }
+
+    /* Clear floats after the columns */
+    .row:after {
+    content: "";
+    display: table;
+    clear: both;
+    }
+
+    /* Style the footer */
+    .footer {
+    background-color: rgb(0, 0, 0);
+    padding: 10px;
+    text-align: center;
+    }
+
+    /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+    @media (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
+    }
+
+    body {
+        background-color: rgb(0, 0, 0);
+    }
+    p {
+        font-family: verdana;
+        font-size: 20px;
+        color: white;
+    }
+    .button {
+        display:inline-block;
+        padding:0.35em 1.2em;
+        border:0.1em solid #FFFFFF;
+        margin:0 0.3em 0.3em 0;
+        border-radius:0.12em;
+        box-sizing: border-box;
+        text-decoration:none;
+        font-family:'Roboto',sans-serif;
+        font-weight:300;
+        color:rgb(255, 255, 255);
+        background-color:rgb(0, 0, 0);
+        text-align:center;
+        transition: all 0.2s;
+    }
+    .button:hover{
+        color:#000000;
+        background-color:rgb(255, 255, 255);
+    }
+    div.first {
+        top: 0px;
+        right:200px;
+        border:5px solid #000000;
+        width:400px;
+    }
+    div.second {
+        top: 0px;
+        right:400px;
+        width:550px;
+        border:5px solid #000000;
+    }
+    div.third {
+      position: fixed;
+      top: 0px;
+      right:0px;
+      width:200px;
+      border:5px solid #000000;
+    
+    }
+    .select-css {
+        overflow: hidden;
+        display: block;
+        font-size: 16px;
+        font-family: sans-serif;
+        font-weight: 700;
+        color: rgb(255, 255, 255);
+        line-height: 1.3;
+        padding: .6em 1.4em .5em .8em;
+        width: 100%;
+        max-width: 100%;
+        box-sizing: border-box;
+        margin: 0;
+        border: 1px solid rgb(0, 0, 0);
+        box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+        border-radius: .5em;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        appearance: none;
+        background-color: rgb(0, 0, 0);
+        background-repeat: no-repeat, repeat;
+        background-position: right .7em top 50%, 0 0;
+        background-size: .65em auto, 100%;
+    }
+    .select-css::-ms-expand {
+        display: none;
+    }
+    .select-css:hover {
+        border-color: rgb(0, 0, 0);
+    }
+    .select-css:focus {
+        border-color: rgb(0, 0, 0);
+        box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+        box-shadow: 0 0 0 3px -moz-mac-focusring;
+        color: rgb(255, 255, 255);
+        outline: none;
+    }
+    .select-css option {
+        font-weight:normal;
+    }
+    input{
+        border-color: white;
+        color: white;
+        background-color: black;
+    }
+</style>
 
 <body>
-    <p>Enter your stellar public key:</p>
-    <input type="text" name="name" id="publicKey" value=""/>    
-    <button onclick="createXDR()">Submit</button>
-    <p>Now to sign it, choose one of the two options below:</p>
-    <form id="signForm" action="">
-        <input type="submit" value="Sign in stellar lab" />
-    </form>
-    <button onclick="signDirect(String(document.getElementById('secret').value))">Sign directly (requires secret key input below:)</button>
-    <input type="text" id="secret" value=""/>
+    <div class="header">
+        <p>Enter your stellar public key:</p>
+        <input type="text" name="name" id="publicKey" value=""/>
+    </div>    
+    <div class="header">
+        <p>And select which asset lists you want to add trust for:</p>
+        <select id="assetSelect" class="select-css" multiple size="2">
+            <option value="AllQadsan">All Qadsan Tokens (5.5 xlm reserve)</option>
+            <option value="StandardQadsan">All "standard" Qadsan Tokens (3.5 xlm reserve)</option>
+        </select>
+        <button class="button" onclick="createXDR(getAssetList(document.getElementById('assetSelect').value))">Next</button>
+        <p style="color:red" id="errormessage"></p>
+    </div>
+    <span id="signing" style='display: none'>
+        <div class="header">
+            <p>Now to sign it, choose one of the two options below:</p>
+        </div>
+        <div class="row">
+            <div class="column">
+                <form id="signForm" action="">
+                    <input type="submit" value="Sign in stellar lab" />
+                </form>
+            </div>
+            <div class="column">
+                <button class="button" onclick="signDirect(String(document.getElementById('secret').value))">Sign directly (requires secret key input below:)</button>
+                <input type="text" id="secret" value=""/>
+            </div>
+        </div>
+    </span>
+    <div class="footer">
+        <p id="submitError" style="color:red"></p>
+        <p id="successMessage" style="color:green"></p>
+    </div>
 </body>
+
+<link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-sdk/8.2.3/stellar-sdk.js"></script>
 <script>
+    document.getElementById("signing").style.display = "none";
+    var activeTransaction = null;
     const server = new StellarSdk.Server('https://horizon-testnet.stellar.org');
     console.log("Hello world")
     function myFunction(){
         console.log("Button working")
     }
+    function getAssetList(nameOfList){
+        //keeping track of all individual assets:
+        ELGOOG = new StellarSdk.Asset("ELGOOG", "GCXGEFMH3MAXCESR2E6TT2TEIVKJ6NO6B2OYDKUQF3FJGP35OBHXU2KU")
+        LAPYAP = new StellarSdk.Asset("LAPYAP", "GARM47SEALFZXCN235Z7MWLBT7ST6TE7QYNYWE6ERQ4PNB52VJXTNQA4")
+        EKIN = new StellarSdk.Asset("EKIN", "GAAXV3E7MYFTZDREN2W4XKUWK4PUCXNQYB3P4AJUUIMFPYLWESWYAXIC")
+        TFOSORCIM = new StellarSdk.Asset("TFOSORCIM", "GBXCVJRI4S4Y3MAN4LTSYJEPUNL6UUWLP7IZJNAZPNSJ4QZ4GQENZIEV")
+        ISPEP = new StellarSdk.Asset("ISPEP", "GCJXS3GGPPFU2F75J74GOHHQBSTNKSW74NR6ER7KDHKZXRRS6WC3NOX6")
+        ASIV = new StellarSdk.Asset("ASIV", "GDLA2ZKWK2ITJV5DE5WSSPVR43UAOTQUXIZCVQYRJL5WA2E6JLSGGGIS")
+        MARGELET = new StellarSdk.Asset("MARGELET", "GBVQD4AY2XHSEMGCX2QCXAGLSONCOHZJHSDBIMHVSF67PYBGIL4YZLX6")
+        KOOBECAF = new StellarSdk.Asset("KOOBECAF", "GCBUALEQ2QX3IYV7R7LN47YL7QHIEICQKQLX2HKDGOODYP5HEP7SYYYH")
+        ELPPA = new StellarSdk.Asset("ELPPA", "GDHIELFPBA3Q5M4WN32U67PBHNRUFRSADNVLBQ5W3F7VJPL6H62QBKGN")
+        ALSET = new StellarSdk.Asset("ALSET", "GC6RHO5KWZFKDSFOOU2FTO7DTN4HUHZ5FWF2BLSHGOHHLO5NGJPWRGUB")
+        assetlist=[]
+        if (nameOfList=="AllQadsan"){
+            assetlist=[ELGOOG, LAPYAP, EKIN, TFOSORCIM, ISPEP, ASIV, MARGELET, KOOBECAF, ELPPA, ALSET]
+        }
+        if (nameOfList=="StandardQadsan"){
+            assetlist=[ELGOOG, LAPYAP, EKIN, TFOSORCIM, ISPEP, ASIV, MARGELET]
+        }
+        return assetlist
+    }
+    const getAsset = (asset) => {
+        if (ASSETS[asset]) return ASSETS[asset]
+            return StellarSdk.Asset.native()
+    }
     async function signDirect(secretKey){
-        publicKey = document.getElementById("publicKey").value
-        const account = await server.loadAccount(publicKey);
-        const fee = await server.fetchBaseFee();
-
-        const transaction = new StellarSdk.TransactionBuilder(account, { fee, networkPassphrase: StellarSdk.Networks.TESTNET })
-            .addOperation(
-                // this operation funds the new account with XLM
-                StellarSdk.Operation.payment({
-                    destination: "GB6C67YB7BHCPPHDRJZIPOZWAN7PPC7CPFX3SGDQW7GX4QML7UXRE35E",
-                    asset: StellarSdk.Asset.native(),
-                    amount: "2"
-                })
-            )
-            .setTimeout(30)
-            .build();
-            console.log(encoded)
-        console.log(secretKey)
-        transaction.sign(StellarSdk.Keypair.fromSecret(secretKey));
         try {
+            publicKey = document.getElementById("publicKey").value
+            const account = await server.loadAccount(publicKey);
+            const fee = await server.fetchBaseFee();
+
+            const transaction = activeTransaction
+            console.log(secretKey)
+            transaction.sign(StellarSdk.Keypair.fromSecret(secretKey));
             const transactionResult = await server.submitTransaction(transaction);
             console.log(transactionResult);
+            document.getElementById("successMessage").innerHTML = "Trustlines added successfully!"
+            document.getElementById("submitError").style.display = "none";
         } catch (err) {
+            document.getElementById("submitError").innerHTML = err.message;
+            document.getElementById("submitError").style.display = "block";
             console.error(err);
         }
     }
-    async function createXDR() {
+    //helpful stackoverflow reference for the .forEach: https://stackoverflow.com/questions/3010840/loop-through-an-array-in-javascript
+    async function createXDR(assetList) {
         // Secret key: SBJLCOZ55DXWH7V7MGPQXNE6ZDG767GKEY5KG2SRPZPLORNTDYNX5ORC
         publicKey = document.getElementById("publicKey").value
-        const account = await server.loadAccount(publicKey);
+        try{
+            const account = await server.loadAccount(publicKey);
+            const fee = await server.fetchBaseFee();
+            const transaction = new StellarSdk.TransactionBuilder(account, { fee, networkPassphrase: StellarSdk.Networks.TESTNET })
+            assetList.forEach(indivAsset => transaction.addOperation(StellarSdk.Operation.changeTrust({asset:indivAsset})))
+            transaction.setTimeout(30)
+            transaction.build();
+
+            // sign the transaction
+            // transaction.sign(StellarSdk.Keypair.fromSecret(secretString));
+
+            // try {
+            //     const transactionResult = await server.submitTransaction(transaction);
+            //     console.log(transactionResult);
+            // } catch (err) {
+            //     console.error(err);
+            // }}  
+            activeTransaction = transaction;
+            encoded = transaction.toEnvelope().toXDR().toString("base64")
+            console.log(encoded)
+            stelLabURL = "https://laboratory.stellar.org/#txsigner?xdr=" + encodeURIComponent(encoded) + "&network=test"
+            document.getElementById("signForm").action = stelLabURL;
+            document.getElementById("signing").style.display = "block";
+            document.getElementById("errormessage").style.display = "none";
+        }
+        catch(err) {
+            document.getElementById("errormessage").innerHTML = err.message;
+            return;
+        }
         /*
             Right now, we have one function that fetches the base fee.
             In the future, we'll have functions that are smarter about suggesting fees,
             e.g.: `fetchCheapFee`, `fetchAverageFee`, `fetchPriorityFee`, etc.
         */
-        const fee = await server.fetchBaseFee();
-
-        const transaction = new StellarSdk.TransactionBuilder(account, { fee, networkPassphrase: StellarSdk.Networks.TESTNET })
-            .addOperation(
-                // this operation funds the new account with XLM
-                StellarSdk.Operation.payment({
-                    destination: "GB6C67YB7BHCPPHDRJZIPOZWAN7PPC7CPFX3SGDQW7GX4QML7UXRE35E",
-                    asset: StellarSdk.Asset.native(),
-                    amount: "2"
-                })
-            )
-            .setTimeout(30)
-            .build();
-
-        // sign the transaction
-        // transaction.sign(StellarSdk.Keypair.fromSecret(secretString));
-
-        // try {
-        //     const transactionResult = await server.submitTransaction(transaction);
-        //     console.log(transactionResult);
-        // } catch (err) {
-        //     console.error(err);
-        // }}  
-        encoded = transaction.toEnvelope().toXDR().toString("base64")
-        console.log(encoded)
-        stelLabURL = "https://laboratory.stellar.org/#txsigner?xdr=" + encodeURIComponent(encoded) + "&network=test"
-        document.getElementById("signForm").action = stelLabURL;
     }
     </script>
 </html>
