Button now passes assetlist to createXDR

--- a/TrustAdder.html
+++ b/TrustAdder.html
@@ -145,8 +145,8 @@
             <option value="AllQadsan">All Qadsan Tokens (5.5 xlm reserve)</option>
             <option value="StandardQadsan">All "standard" Qadsan Tokens (3.5 xlm reserve)</option>
         </select>
-        <!--<button class="button" onclick="createXDR(getAssetList(document.getElementById('assetSelect').value))">Next</button>-->
-        <button class="button" onclick="createXDR('hello')">Next</button>
+        <button class="button" onclick="createXDR(getAssetList(document.getElementById('assetSelect').value))">Next</button>
+        <!--<button class="button" onclick="createXDR('hello')">Next</button>-->
         <p style="color:red" id="errormessage"></p>
     </div>
     <span id="signing" style='display: none'>
