Added default selection in TrustAdder.html

--- a/TrustAdder.html
+++ b/TrustAdder.html
@@ -142,7 +142,7 @@
     <div class="header">
         <p>And select which asset lists you want to add trust for:</p>
         <select id="assetSelect" class="select-css" multiple size="2">
-            <option value="AllQadsan">All Qadsan Tokens (5.5 xlm reserve)</option>
+            <option value="AllQadsan" selected>All Qadsan Tokens (5.5 xlm reserve)</option>
             <option value="StandardQadsan">All "standard" Qadsan Tokens (3.5 xlm reserve)</option>
         </select>
         <button class="button" onclick="createXDR(getAssetList(document.getElementById('assetSelect').value))">Next</button>
