--- a/TrustAdder.html
+++ b/TrustAdder.html
@@ -238,7 +238,7 @@
             //BLOOP = new StellarSdk.Asset("USDC", "GC5W3BH2MQRQK2H4A6LP3SXDSAAY2W2W64OWKKVNQIAOVWSAHFDEUSDC")
             //transactionBuilder.addOperation(StellarSdk.Operation.changeTrust({asset:BLOOP}))
             transactionBuilder.setTimeout(0)
-            transactionBuilder.addMemo(StellarSdk.Memo.text('TrustAdder'))
+            transactionBuilder.addMemo(StellarSdk.Memo.text('jaws.com/TrustAdder.html'))
             transaction = transactionBuilder.build();
             activeTransaction = transaction;
             console.log(transaction)
